--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "starrydux",
+  "name": "reduxo",
   "version": "1.0.0",
-  "description": "",
+  "description": " lightweight redux clone",
   "main": "index.js",
   "scripts": {
     "test": "mocha --compilers js:babel-register"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["state","store","redux"],
+  "author": "Andrew Ellis",
   "license": "ISC",
   "devDependencies": {
-    "babel-preset-es2015": "^6.18.0",
-    "babel-register": "^6.18.0",
-    "chai": "^3.5.0",
-    "mocha": "^3.1.2",
-    "rewire": "^2.5.2",
-    "sinon": "^1.17.6"
+    "babel-preset-es2015": "6.18.0",
+    "babel-register": "6.18.0",
+    "chai": "3.5.0",
+    "mocha": "3.1.2"
   }
 }
